--- a/steps/start.html
+++ b/steps/start.html
@@ -5,8 +5,8 @@
 	</div>
 </div>
 <!-- meta: author, mail, conference name -->
-<div class="row">
-	<div class="col-md-4 meta">
+<div class="row meta">
+	<div class="col-md-6">
 		<section class="author">Davide Parisi</section>
 		<section class="email">davideparisi<span class="red">@</span>gmail.com</section>
 		<section class="conference">TechConf2015</section>
