--- a/steps/differenza.html
+++ b/steps/differenza.html
@@ -1,5 +1,5 @@
 <p class="big">
-	rispetto al suo ispiratore, <span class="text-shadow">impress.js</span> ha alcuni vantaggi (<abbr title="In My Humble Opinion">imho</abbr>)
+	rispetto al suo ispiratore, <span class="alert">Impress.js</span> ha alcuni vantaggi (<abbr title="In My Humble Opinion">imho</abbr>)
 </p>
 
 
