--- a/steps/introduction.html
+++ b/steps/introduction.html
@@ -1,5 +1,9 @@
 <p class="big">
-	<b>Impress.js</b> è un <span class="red underline">framework</span> per creare presentazioni liberamente ispirato a <a href="http://prezi.com">Prezi</a>
+	<b class="alert">Impress.js</b> è un <span class="red underline">framework</span> per creare presentazioni liberamente ispirato a <a href="http://prezi.com"><b>Prezi</b></a>
+</p>
+
+<p>
+	<img src="img/prezi.png" alt="Prezi.com">
 </p>
 
 
