--- a/steps/start.html
+++ b/steps/start.html
@@ -8,7 +8,7 @@
 <div class="row meta">
 	<div class="col-md-6">
 		<section class="author">Davide Parisi</section>
-		<section class="email">davideparisi<span class="red">@</span>gmail.com</section>
+		<section class="email">davideparisi@gmail.com</section>
 		<section class="conference">TechConf2015</section>
 	</div>
 </div>
