--- a/steps/svantaggi.html
+++ b/steps/svantaggi.html
@@ -1,6 +1,10 @@
-<p>Presenta principalmente uno svantaggio: 
+<p>Presenta principalmente uno <span class="alert">svantaggio</span>: 
 
-se non si è pratici di HTML e CSS può diventare ostico creare una presentazione<sup>*</sup>
+se non si è pratici di <b>HTML</b> e <b>CSS</b> può diventare ostico creare una presentazione<sup>*</sup>
+
+<p>
+	<img src="img/html_css.jpg" alt="Html e CSS">
+</p>
 
 <p class="footnote"><sup>*</sup><small>(attualmente non esistono editor <abbr title="What You See Is What You Get">WYSIWYG</abbr>)</small></p>
 
